# aaronmurniadi.github.io

./: .eleventy.js  .gitignore  .gitmodules  .pages.yml  404.html  Gemfile  LICENSE  README.md  _config.yml  about.html  base.html  blog_generator.py  contact.md  content.typ  example.html  generate.py  index.html  index.md  make.sh  mkdocs.yml  package-lock.json  photography.md  pyproject.toml  requirements.txt  serve.py  sitemap.njk  sitemap.xml  toolbox.md  typesettings.md  typst-collection.md  typst_collection.md
src/: index.md  mkdocs.yml  pyproject.toml  robots.txt  script.js  sitemap.xml  style.css
src/article/: 2018-05-30-pertanyaan-pertanyaan-filsafat-manusia.md  2018-06-07-pendidikan-karakter-menurut-martin-buber.md  2019-04-07-selayang-pandang-pendekatan-pascakolonial-dari-orientalisme-subaltern-resistensi-sampai-rekognisi-dan-reclaiming.md  2019-05-26-analisis-pascakolonial-pergulatan-eksistensi-identitas-dan-rekognisi-agama-kaharingan.md  2019-06-09-telaah-metodologi-filsafat-fenomenologi-eksistensial-driyarkara.md  2019-06-11-emmanuel-levinass-totality-and-infinity-metafisika-dan-transendensi.md  2019-12-02-refleksi-filosofis-atas-film-hotel-rwanda-2004-berdasarkan-pemikiran-emmanuel-levinas.md  2019-12-04-cerita-rakyat-sebagai-media-pembelajaran-filsafat-untuk-anak-anak-di-indonesia.md  2020-06-04-gaya-filsafat-oxford-dalam-kritik-hla-hart-atas-teori-hukum-john-austin.md  2020-06-11-transendensi-dan-waktu-kritik-levinas-atas-heidegger.md  2020-06-14-stoikisme-seneca-bersikap-stoik-dalam-dunia-politik-yang-korup.md
src/blog/: 2025-01-17-moving-my-blog-from-github-pages-to-bearblog.md  2025-02-12-about-the-translate-this-page-button.md  2025-02-12-shell-function-to-help-with-pythons-virtual-environment.md  2025-02-14-time-to-tidy-up-your-github-graveyard.md  2025-02-24-til-that-you-can-make-any-integer-with-four-2s.md
src/comprehensive-theses/: 2020-11-24-epistemologi.md  2020-11-24-etika.md  2020-11-24-filsafat-manusia.md  2020-11-24-metafisika.md
src/contact/: index.md
src/docs/: index.md
src/filsafat/: 2018-05-06-refleksi-makna-kesepian.md  2018-10-25-selayang-pandang-sejarah-perkembangan-kosmologi.md  2019-06-12-pertanyaan-metafisika.md  2019-10-24-levinas-metafisika-dan-transendensi.md  2019-11-26-layanan-kesehatan.md  2019-12-03-uas-emmanuel-levinas.md  2020-06-05-filsafat-oxford-hart.md  2020-06-12-kritik-levinas-atas-heidegger.md  index.md
src/static/: prefetcher.js  script.js  style.css
src/status/: 2025-01-21-added-status-timeline-for-microblogging.md  2025-01-21-building-legacy-electron-app-in-docker.md  (+9 more)
(+667 files in other folders)
