[project]
name = "static-blog-generator"
version = "0.1.0"
description = "A simple static blog generator with GitHub Flavored Markdown support"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "markdown>=3.4.0",
    "pymdown-extensions>=10.0.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "watchdog>=3.0.0",
    "types-markdown>=3.9.0.20250906",
    "types-pyyaml>=6.0.12.20250915",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
]

[project.scripts]
blog-generate = "blog_generator:main"
blog-watch = "blog_generator:watch_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["blog_generator.py"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black" 
