[project]
name = "static-blog-generator"
version = "0.1.0"
description = "A simple static blog generator with GitHub Flavored Markdown support"
authors = [
    {name = "Aaron P. Murniadi", email = "aaronmurniadi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "markdown>=3.4.0",
    "pymdown-extensions>=10.0.0",
    "PyYAML>=6.0",
    "jinja2>=3.1.0",
    "watchdog>=3.0.0",
    "types-markdown>=3.9.0.20250906",
    "types-pyyaml>=6.0.12.20250915",
    "rcssmin>=1.2.2",
    "rjsmin>=1.2.5",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "types-jinja2",
]

[project.scripts]
generate = "generate:main"
generate-watch = "generate:watch_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["generate.py"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"] 

[tool.mypy]
python_version = "3.9"
strict = true

[[tool.mypy.overrides]]
module = "watchdog.*"
ignore_missing_imports = true 
