[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aaron Purnomo Murniadi <aaronmurniadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"
mkdocs-material-extensions = "^1.1.1"
mkdocs-material = "^9.1.3"
mkdocs-rss-plugin = "^1.6.0"
mkdocs-blogging-plugin = "^2.2.2"
mkdocs-minify-plugin = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
